src/tests/update/snapshots/ciboulette2pg__tests__update__relationships_many_to_one_sorting_by_child_full_path_rel_update_query.snap
---
source: src/tests/update/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_comments_update_0" AS (
  UPDATE
    "public"."comments"
  SET
    "author" = $1
  WHERE
    "public"."comments"."id" = $2 RETURNING *
),
"cte_comments_data_1" AS (
  SELECT
    "cte_comments_update_0"."id" :: TEXT AS "id",
    "cte_comments_update_0"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $3 :: TEXT AS "type",
    JSON_BUILD_OBJECT($4, "cte_comments_update_0"."body") AS "data",
    "cte_comments_update_0"."author" AS "rel_author"
  FROM
    "cte_comments_update_0"
),
"cte_rel_peoples_data_2" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    "cte_comments_data_1"."id" :: TEXT AS "related_id",
    $5 :: TEXT AS "related_type",
    $6 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color",
    "public"."peoples"."first-name" AS "sort_first-name"
  FROM
    "public"."peoples"
    INNER JOIN "cte_comments_data_1" ON "cte_comments_data_1"."rel_author" = "public"."peoples"."id"
),
"cte_final_main_data" AS (
  SELECT
    DISTINCT ON ("cte_rel_peoples_data_2"."main_id") "cte_rel_peoples_data_2".*,
    "cte_rel_peoples_data_2"."sort_first-name" AS "sort__first-name"
  FROM
    "cte_rel_peoples_data_2"
  ORDER BY
    "cte_rel_peoples_data_2"."main_id"
) (
  SELECT
    "cte_final_main_data"."id",
    "cte_final_main_data"."type",
    "cte_final_main_data"."data",
    "cte_final_main_data"."related_type",
    "cte_final_main_data"."related_id"
  FROM
    "cte_final_main_data"
  ORDER BY
    "cte_final_main_data"."sort__first-name" ASC
)
UNION
ALL (
  SELECT
    "cte_comments_data_1"."id",
    "cte_comments_data_1"."type",
    "cte_comments_data_1"."data",
    "cte_comments_data_1"."related_type",
    "cte_comments_data_1"."related_id"
  FROM
    "cte_comments_data_1"
);
